Update geyser ext